Working Semantic UI on top of Django

--- a/frontend/less/Index.less
+++ b/frontend/less/Index.less
@@ -26,4 +26,4 @@ ________  ________  _________        ________             ________  ________  __
 @import "./mixins/various.less";
 @import "./mixins/mediaqueries.less";
 
-@import "./main.less";
+@import "../semantic-ui/semantic.less";
