--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
   </head>
   
   <body>
-    <div id="react-app"></div>
+    <div id="root"></div>
     {% render_bundle 'main' 'js' %}
   </body>
 </html>
