--- a/frontend/semantic-ui/definitions/elements/flag.less
+++ b/frontend/semantic-ui/definitions/elements/flag.less
@@ -44,7 +44,8 @@ i.flag:not(.icon) {
 i.flag:not(.icon):before {
   display: inline-block;
   content: '';
-  background: url(@spritePath) no-repeat -108px -1976px;
+  // background: url(@spritePath) no-repeat -108px -1976px;
+  background: url(/assets/images/flags.png) no-repeat -108px -1976px;
   width: @width;
   height: @height;
 }
